--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             </a>
         </v-toolbar-title>
         <v-toolbar-title class="ml-2">
-          <a style="color: white" class="ml-3" href="./">garbage dump </a>
+          <a style="color: white" class="ml-3" href="/">garbage dump </a>
           <a style="color: white" class="ml-7" href="./about.html">About</a>
-          <a style="color: white" class="ml-2" href="./">Blog</a>
+          <a style="color: white" class="ml-2" href="/">Blog</a>
           <a style="color: white" class="ml-2" href="./writeups/">Writeups</a>
         </v-toolbar-title>
       </v-app-bar>
