--- a/writeups/index.html
+++ b/writeups/index.html
@@ -132,17 +132,17 @@
     <v-app v-show="load" style="display: none">
       <v-app-bar app dark Dense elevation="2">
         <v-toolbar-title >
-            <a href="./">
+            <a href="/">
               <v-img
                 width="40"
                 src="https://cdn.jsdelivr.net/gh/twitter/twemoji@13.0.1/assets/72x72/1f5d1.png"/>
             </a>
         </v-toolbar-title>
         <v-toolbar-title class="ml-2">
-          <a style="color: white" class="ml-3" href="./">garbage dump </a>
+          <a style="color: white" class="ml-2" href="/">garbage dump </a>
           <a style="color: white" class="ml-10" href="./about.html">About</a>
           <a style="color: white" class="ml-2" href="./">Blog</a>
-          <a style="color: white" class="ml-2" href="./writeups.html">Writeups</a>
+          <a style="color: white" class="ml-2" href="/writeups/">Writeups</a>
         </v-toolbar-title>
       </v-app-bar>
 
