modifying and first post incoming

--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Writeups | garbage dump</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <title>About | garbage dump</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -140,10 +139,10 @@
             </a>
         </v-toolbar-title>
         <v-toolbar-title class="ml-2">
-          <a style="color: white" class="ml-3" href="./">garbage dump </a>
-          <a style="color: white" class="ml-10" href="./about.html">About</a>
+          <a style="color: white" class="ml-2" href="/">garbage dump </a>
+          <a style="color: white" class="ml-10" href="/about/">About</a>
           <a style="color: white" class="ml-2" href="./">Blog</a>
-          <a style="color: white" class="ml-2" href="./writeups.html">Writeups</a>
+          <a style="color: white" class="ml-2" href="/writeups/">Writeups</a>
         </v-toolbar-title>
       </v-app-bar>
 
