--- a/writeups/index.html
+++ b/writeups/index.html
@@ -140,7 +140,7 @@
         </v-toolbar-title>
         <v-toolbar-title class="ml-2">
           <a style="color: white" class="ml-2" href="/">garbage dump </a>
-          <a style="color: white" class="ml-10" href="./about.html">About</a>
+          <a style="color: white" class="ml-10" href="/about/">About</a>
           <a style="color: white" class="ml-2" href="./">Blog</a>
           <a style="color: white" class="ml-2" href="/writeups/">Writeups</a>
         </v-toolbar-title>
