--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <a style="color: white" class="ml-3" href="/">garbage dump </a>
           <a style="color: white" class="ml-7" href="/about/">About</a>
           <a style="color: white" class="ml-2" href="/">Blog</a>
-          <a style="color: white" class="ml-2" href="./writeups/">Writeups</a>
+          <a style="color: white" class="ml-2" href="/writeups/">Writeups</a>
         </v-toolbar-title>
       </v-app-bar>
 
