--- a/writeups/index.html
+++ b/writeups/index.html
@@ -141,7 +141,7 @@
         <v-toolbar-title class="ml-2">
           <a style="color: white" class="ml-2" href="/">garbage dump </a>
           <a style="color: white" class="ml-10" href="/about/">About</a>
-          <a style="color: white" class="ml-2" href="./">Blog</a>
+          <a style="color: white" class="ml-2" href="/">Blog</a>
           <a style="color: white" class="ml-2" href="/writeups/">Writeups</a>
         </v-toolbar-title>
       </v-app-bar>
